--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
-spring.application.name=StudentManagementApp
-
-spring.datasource.url=jdbc:mysql://localhost:3306/StudentManagementApp
+# MySQL Database Configuration
+spring.datasource.url=jdbc:mysql://mysql.railway.internal:3306/railway
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=wPkSnGPYzemDHhuwdSorJBHoOdDWZrSm
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA and Hibernate Configuration (if you're using JPA/Hibernate)
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
